fix: z-index, copyright and bio component variables

--- a/src/assets/scss/pages/Main.scss
+++ b/src/assets/scss/pages/Main.scss
@@ -4,6 +4,7 @@
     position: sticky;
     top: 0;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+    z-index: 1;
     
 
     nav {
